  Server monitor module moved to Swing directory
  Server monitor now uses gradle application plugin
  Module names no longer used as artifact names
  EntityGeneratorModel moved to swing.framework.tools and EntityGeneratorPanel to swing.framework.tools.ui
  Removed 'framework' from plugin module names
  NumberField bug fixed, can now handle trailing decimal zeros (needs refactoring, perhaps even rethinking)
  UiUtil.getBorderlessTabbedPaneUI() removed, didn't work with GTKLookAndFeel
  UiUtil.getDefaultLookAndFeelClassName() added, overrides GTKLookAndFeel with MetalLookAndFeel due to ugly tabbed panes, sets the TabbedPane.contentBorderInsets property in a static block
  EntityApplicationPanel.getDefaultLookAndFeelClassName() uses the above, as does EntityServerMonitorPanel
  SizedDocument.setCaret() added, hack to set the correct caret position when replacing text (the old solution did not work with text selected)
  DefaultEntityTableCellRenderer.setValue() bug fixed, did not use format for string based properties, now handles ValueListProperty correctly
  EntityUiUtil.createTextField() bug fixed, did not use the format for string based properties
  SizedDocument refactored and simplified
  NumberField.NumberDocument no longer extends SizedDocument, bug fixed, refactored
  EntityEditPanel.USE_SAVE_CONTROL configuration value added
  FileUtil.serializeToFile() and deserializeFromFile() now throw IOException instead of SerializeException
  EntityEditPanel, EntityEditView, clear now requests initial focus
  TextInputPanel bug fixed, text field now receives focus when input panel is closed, now uses SizedDocument
  EntityEditModel and EntityApplicationModel is/setWarnAboutUnsavedData() added
  SwingFilteredComboBoxModel.setSelectedItem() bug fixed, allowSelectionChange() was called prematurely
  ResultPacker.pack() default implementation added
  ClientUserMonitor, clientVersion and frameworkVersion columns added to user history table